Finish blog post page

--- a/resources/assets/sass/blog-post.sass
+++ b/resources/assets/sass/blog-post.sass
@@ -2,8 +2,11 @@
 @import "imports/link-effects"
 @import "base/base"
 @import "layout/layout"
-@import "layout/sidebar"
 @import "layout/section"
-@import "modules/hero"
+@import "layout/recent-blog"
+@import "modules/btn"
+@import "layout/recent-works"
 @import "modules/blog-post"
+@import "modules/blog-post-preview"
+@import "modules/work-preview"
 @import "modules/footer"
