--- a/resources/assets/sass/modules/_blog-post.sass
+++ b/resources/assets/sass/modules/_blog-post.sass
@@ -2,7 +2,20 @@
 
 .post
 	background-color: #fff
-	padding: 30px 0
+	padding: 30px 0 150px
+
+.post__title
+	font-size: 55px
+	color: $darkGray
+	margin: 80px auto
+	text-align: center
+	width: 60%
+
+.post__date
+	font-family: "Montserrat"
+	text-transform: uppercase
+	color: $red
+	font-size: 14px
 
 .post__content,
 .viewmore
@@ -10,20 +23,64 @@
 	box-sizing: border-box
 
 .post__content
-	width: 60%
-	margin-right: 10%
+	width: 55%
+	margin: 0 auto
+	display: block
+	font-size: 15px
+	-moz-osx-font-smoothing: grayscale
+
+	a
+		color: $red
 
 	p
-		line-height: 1.7
+		line-height: 1.8
+
+	li
+		font-family: "Lato"
+		margin: 5px 0
+		line-height: 1.6
+
+		&:before
+			font-weight: 900
+			color: $red
+			margin-left: -18px
+			margin-right: 10px
+
+	ul
+		margin: 45px 0
+
+		li:before
+				content:"»"
+
+	ol
+		list-style-type: none
+		font-family: "Lato"
+
+		li
+			counter-increment: step-counter
+
+		li:before
+			content: counter(step-counter)
+
+	img
+		max-width: 100%
 
 .viewmore
 	width: 30%
 	padding: 0
 	vertical-align: top
 
-.viewmore__posts
+.viewmore__posts,
+.viewmore__works
 	padding-left: 0
 
 .viewmore__heading
 	text-align: center
 	margin-bottom: 35px
+
+@media (max-width: 700px)
+	.post__title
+		width: 100%
+
+	.post__content
+		width: 100%
