Small fixes to homepage styles

--- a/resources/assets/sass/index.sass
+++ b/resources/assets/sass/index.sass
@@ -5,7 +5,8 @@
 @import "layout/section"
 @import "modules/header"
 @import "modules/about"
-@import "modules/recent-works"
+@import "layout/recent-works"
+@import "modules/work-preview"
 @import "modules/btn"
 @import "layout/recent-blog"
 @import "modules/blog-post-preview"
