--- a/resources/assets/sass/modules/_blog-post-preview.sass
+++ b/resources/assets/sass/modules/_blog-post-preview.sass
@@ -13,6 +13,8 @@
 		text-transform: uppercase
 		font-family: "Montserrat"
 		text-align: center
+		display: block
+		margin-top: 10px
 
 	.post__header-separator
 		border: 1px solid $red
