--- a/resources/assets/sass/modules/_header.sass
+++ b/resources/assets/sass/modules/_header.sass
@@ -12,7 +12,7 @@
 
 .header__logo--image
 	display: block
-	margin: 0 auto 25px
+	margin: 0 auto 40px
 
 .header__logo--text
 	font-size: 14px
@@ -46,6 +46,7 @@
 	font-size: 14px
 
 .welcome__about
+	display: block
 	font-size: 14px
 	font-weight: 300
 	max-width: 430px
