--- a/www/css/index.css
+++ b/www/css/index.css
@@ -73,7 +73,7 @@ ul {
 
 .header__logo--image {
   display: block;
-  margin: 0 auto 25px; }
+  margin: 0 auto 40px; }
 
 .header__logo--text {
   font-size: 14px;
@@ -104,6 +104,7 @@ ul {
   font-size: 14px; }
 
 .welcome__about {
+  display: block;
   font-size: 14px;
   font-weight: 300;
   max-width: 430px;
@@ -202,31 +203,9 @@ ul {
     color: #f0f0f1;
     font-weight: 400; }
 
-.recent-works__work:nth-child(2) {
+.work-preview:nth-child(2) {
   margin: 0 55px;
   transition: margin 0.3s ease; }
-
-.recent-works__work__thumb-container {
-  border-radius: 6px;
-  overflow: hidden;
-  max-width: 360px;
-  margin: 0 auto;
-  height: 200px; }
-
-.recent-works__work__heading {
-  font-size: 13px;
-  font-weight: 400;
-  color: #fff; }
-
-.recent-works__work__link {
-  color: inherit;
-  text-decoration: none; }
-
-.recent-works__work__date {
-  font-family: "Lato";
-  font-size: 12px;
-  color: #fff;
-  text-transform: uppercase; }
 
 .recent-works .btn .btn__text {
   color: #fff; }
@@ -234,26 +213,59 @@ ul {
 .recent-works .btn .btn__bg {
   background-color: #465256; }
 
+.work-preview {
+  text-align: center; }
+  .work-preview.whitebg .work-preview__heading {
+    color: #2e2e2e;
+    font-weight: 900; }
+  .work-preview.whitebg .work-preview__date {
+    color: #2e2e2e;
+    font-weight: 900;
+    font-size: 11px;
+    font-family: "Montserrat"; }
+
+.work-preview__thumb-container {
+  border-radius: 6px;
+  overflow: hidden;
+  max-width: 360px;
+  margin: 0 auto;
+  height: 200px; }
+
+.work-preview__heading {
+  font-size: 13px;
+  font-weight: 400;
+  color: #fff; }
+
+.work-preview__link {
+  color: inherit;
+  text-decoration: none; }
+
+.work-preview__date {
+  font-family: "Lato";
+  font-size: 12px;
+  color: #fff;
+  text-transform: uppercase; }
+
 @media (max-width: 1300px) {
-  .recent-works__work:nth-child(2) {
+  .work-preview:nth-child(2) {
     margin: 0 30px;
     transition: margin 0.3s ease; } }
 
 @media (max-width: 1080px) {
-  .recent-works__work:nth-child(2) {
+  .work-preview:nth-child(2) {
     margin: 50px 0; } }
 
 @media (max-width: 700px) {
-  .recent-works__work:nth-child(2) {
+  .work-preview:nth-child(2) {
     margin-bottom: 0; }
-  .recent-works__work:nth-child(3) {
+  .work-preview:nth-child(3) {
     display: none; }
-  .recent-works__work__thumbnail {
+  .work-preview__thumbnail {
     width: 100%;
     height: auto; } }
 
 @media (max-width: 500px) {
-  .recent-works__work__thumb-container {
+  .work-preview__thumb-container {
     max-width: none;
     height: 230px; } }
 
@@ -317,7 +329,9 @@ ul {
   font-size: 11px;
   text-transform: uppercase;
   font-family: "Montserrat";
-  text-align: center; }
+  text-align: center;
+  display: block;
+  margin-top: 10px; }
 
 .blog__post-preview .post__header-separator {
   border: 1px solid #ec6759;
