Fix hero date style

--- a/resources/assets/sass/modules/_hero.sass
+++ b/resources/assets/sass/modules/_hero.sass
@@ -27,3 +27,9 @@
 
 .hero__date
 	text-align: center
+	display: block
+	text-transform: uppercase
+	font-size: 14px
+	font-family: "Montserrat"
+	margin-top: 20px
+	margin-bottom: 15px
