--- a/resources/assets/sass/modules/_blog-post.sass
+++ b/resources/assets/sass/modules/_blog-post.sass
@@ -63,9 +63,13 @@
 
 		li:before
 			content: counter(step-counter)
+			font-size: 13px
 
 	img
 		max-width: 100%
+
+	code
+		font-size: 12px
 
 .viewmore
 	width: 30%
