--- a/resources/assets/sass/blog-post.sass
+++ b/resources/assets/sass/blog-post.sass
@@ -6,7 +6,7 @@
 @import "layout/recent-blog"
 @import "modules/btn"
 @import "layout/recent-works"
-@import "modules/blog-post"
+@import "modules/post"
 @import "modules/blog-post-preview"
 @import "modules/work-preview"
 @import "modules/footer"
