--- a/resources/assets/sass/work.sass
+++ b/resources/assets/sass/work.sass
@@ -4,10 +4,11 @@
 @import "layout/layout"
 @import "layout/section"
 @import "layout/recent-blog"
-@import "modules/work"
 @import "modules/btn"
 @import "modules/hero"
 @import "layout/recent-works"
 @import "modules/blog-post-preview"
+@import "modules/post"
+@import "modules/work"
 @import "modules/work-preview"
 @import "modules/footer"
