--- a/resources/assets/sass/modules/_post.sass
+++ b/resources/assets/sass/modules/_post.sass
@@ -1,5 +1,3 @@
-@import "modules/blog-post-preview"
-
 .post
 	background-color: #fff
 	padding: 0 0 150px
@@ -12,18 +10,15 @@
 	width: 60%
 	transition: all .3s ease
 
-.post__date
+.post__date,
+.post__category
 	font-family: "Montserrat"
 	text-transform: uppercase
 	color: $red
 	font-size: 14px
 
 .post__content,
-.viewmore
-	display: inline-block
-	box-sizing: border-box
-
-.post__content
+.post__content .content__container
 	width: 55%
 	margin: 0 auto
 	display: block
@@ -33,6 +28,10 @@
 
 	a
 		color: $red
+		text-decoration: none
+
+		&:hover
+			text-decoration: underline
 
 	p
 		line-height: 1.8
@@ -85,12 +84,14 @@
 	margin-bottom: 35px
 
 @media (max-width: 1300px)
-	.post__content
+	.post__content,
+	.post__content .content__container
 		width: 70%
 		transition: width .3s ease
 
 @media (max-width: 1080px)
-	.post__content
+	.post__content,
+	.post__content .content__container
 		width: 90%
 		transition: width .3s ease
 
@@ -100,7 +101,8 @@
 		font-size: 35px
 		transition: all .3s ease
 
-	.post__content
+	.post__content,
+	.post__content .content__container
 		width: 100%
 
 		code
