--- a/resources/assets/sass/modules/_work.sass
+++ b/resources/assets/sass/modules/_work.sass
@@ -1,7 +1,20 @@
-.work__body
+.post
+	background-color: transparent
+	padding-bottom: 0
+
+.post__content
 	background-color: #fff
 	margin-bottom: 0
 	padding: 1px
+	position: relative
+	width: 100%
+	height: 100%
+	padding-bottom: 80px
+
+.post__category
+	text-align: center
+	margin-top: -50px
+	margin-bottom: 50px
 
 .work__title
 	font-size: 55px
@@ -10,9 +23,3 @@
 	text-align: center
 	width: 60%
 	transition: all .3s ease
-
-@media (max-width: 700px)
-	.work__title
-		width: 100%
-		font-size: 35px
-		transition: all .3s ease
