--- a/www/css/work.css
+++ b/www/css/work.css
@@ -258,10 +258,37 @@ ul {
   background-color: #fff;
   padding: 0 0 150px; }
 
+@-webkit-keyframes homebtn {
+  0% {
+    stroke-dashoffset: 104.06211678323668px; }
+  50% {
+    stroke-dasharray: 50px 70px; }
+  100% {
+    stroke-dashoffset: 0; } }
+
+@keyframes homebtn {
+  0% {
+    stroke-dashoffset: 104.06211678323668px; }
+  50% {
+    stroke-dasharray: 50px 70px; }
+  100% {
+    stroke-dashoffset: 0; } }
+
+.home-btn {
+  position: absolute;
+  top: 95px;
+  transition: all 0.3s ease; }
+  .home-btn circle {
+    stroke-dasharray: 104.06211678323668px; }
+  .home-btn:hover circle {
+    -webkit-animation: homebtn 0.6s ease;
+    animation: homebtn 0.6s ease; }
+
 .post__title {
   font-size: 55px;
   color: #2e2e2e;
-  margin: 80px auto;
+  padding: 80px 0;
+  margin: 0 auto;
   text-align: center;
   width: 60%;
   transition: all 0.3s ease; }
@@ -352,6 +379,10 @@ ul {
     transition: width 0.3s ease; } }
 
 @media (max-width: 700px) {
+  .home-btn {
+    top: 15px;
+    left: 15px;
+    transition: all 0.3s ease; }
   .post__title {
     width: 100%;
     font-size: 35px;
@@ -370,7 +401,7 @@ ul {
 .post__content {
   background-color: #fff;
   margin-bottom: 0;
-  padding: 1px;
+  padding: 1px 0;
   position: relative;
   width: 100%;
   height: 100%;
