--- a/resources/assets/sass/modules/_work.sass
+++ b/resources/assets/sass/modules/_work.sass
@@ -5,7 +5,7 @@
 .post__content
 	background-color: #fff
 	margin-bottom: 0
-	padding: 1px
+	padding: 1px 0
 	position: relative
 	width: 100%
 	height: 100%
