--- a/www/css/blog-post.css
+++ b/www/css/blog-post.css
@@ -266,6 +266,11 @@ ul {
     .post__content .content__container code {
       font-size: 13px; } }
 
+.blog__post-preview.appear {
+  display: inline-block !important;
+  -webkit-animation: fadeIn 1s ease;
+  animation: fadeIn 1s ease; }
+
 .blog__post-preview .post__heading {
   font-size: 13px;
   text-align: center; }
@@ -335,11 +340,17 @@ ul {
 @media (max-width: 1080px) {
   .blog__post-preview {
     display: none; }
+    .blog__post-preview:nth-child(2n) {
+      margin: 50px 0; }
     .blog__post-preview:first-child {
       display: block; }
     .blog__post-preview .post__body {
       width: 70%;
       margin: 25px auto 0; } }
+
+@media (max-width: 700px) {
+  .blog .btn {
+    margin-top: 50px; } }
 
 @media (max-width: 600px) {
   .blog__post-preview .post__body {
@@ -356,6 +367,10 @@ ul {
     font-weight: 900;
     font-size: 11px;
     font-family: "Montserrat"; }
+  .work-preview.appear {
+    display: inline-block !important;
+    -webkit-animation: fadeIn 1s ease;
+    animation: fadeIn 1s ease; }
 
 .work-preview__thumb-container {
   border-radius: 6px;
@@ -389,10 +404,12 @@ ul {
     margin: 50px 0; } }
 
 @media (max-width: 700px) {
-  .work-preview:nth-child(2) {
-    margin-bottom: 0; }
+  .btn {
+    margin-top: 0; }
   .work-preview:nth-child(3) {
     display: none; }
+  .work-preview:last-of-type {
+    margin-bottom: 50px; }
   .work-preview__thumbnail {
     width: 100%;
     height: auto; } }
